--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxt/icon": "^1.5.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/nuxt": "^11.0.3",
     "click-outside-vue3": "^4.0.1",
     "nuxt": "^3.13.0",
     "vue": "latest"
